# psrav2

./: .coverage  .editorconfig  .env.example  .eslintrc.json  .gitattributes  .gitignore  .pre-commit-config.yaml  API Server Architecture.md  ARCHITECTURE.md  BUILD_STATUS_REPORT.md  Best Practices Integration Roadmap.md  CHANGELOG.md  CHECKLIST.md  CONTRIBUTING.md  Centralized Logging & Monitoring Implementatieplan.md  Centralized Secret Management Implementatieplan.md  Chart.yaml  Comparison_ Original vs. Revised Implementation Plan.md  Component Interaction_ API Server, Frontend, and LangGraph Origin Engine.md  Comprehensive Service Improvement Plan_ Transition to Enterprise-Grade, AI-Driven SaaS (2025-2027).pptx  Consolidated PSRA-LTSD Codebase Regression Analysis and Inventory Report.md  Cross-Module Strategy Report_ Collaboration and Integration in the Enterprise Monorepo.md  Current Infrastructure Analysis.md  DEPLOYMENT.md  DEPLOYMENT_REPORT.md  DevOps & AI Observability Dashboard.md  Docker Compose Standardization.md  Dockerfile  Dockerfile.frontend  FINAL_QA_STATUS.md  FIXES_IMPLEMENTED_SUMMARY.md  FIXES_REQUIRED.md  Fase 1_ Foundation & Quick Wins - Implementatieplan.md  Fase 2_ Security & Compliance - Implementatieplan.md  Fase 3_ Observability & Resilience - Implementatieplan.md  Fase 4_ Scalability & Performance - Implementatieplan.md  Frontend Architecture.md  Health Check Implementation.md  HealthCheck.php  High Priority Code Patches.md  (+251 more)
.github/: CHANGES_SUMMARY.md  CI_CD_DOCUMENTATION.md  CI_CD_README.md  CODEOWNERS  GITHUB_ACTIONS_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  PIPELINE_DIAGRAM.md  PULL_REQUEST_TEMPLATE.md  QUALITY_GATES_QUICK_REFERENCE.md  WORKFLOWS.md  WORKFLOWS_QUICK_REFERENCE.md  dependabot.yml
.husky/: pre-commit
app/: globals.css  layout.tsx  page-old-backup.tsx  page.tsx
backend/: CELERY_SETUP.md  PERFORMANCE_OPTIMIZATIONS.md  celery_app.py  main.py
ci/: ci.yml  release.yml
config/: app.json
data/: hs-codes.json  origin-rules.json  persona-scenarios.ts  trade-agreements.json
docker/: Dockerfile.backend  Dockerfile.frontend  traefik.yml
docs/: ACCEPTANCE_Y1-A1.md  ACCEPTANCE_Y1-A10.md  ACCEPTANCE_Y1-A11.md  ACCEPTANCE_Y1-A12.md  ACCEPTANCE_Y1-A13.md  ACCEPTANCE_Y1-A14.md  ACCEPTANCE_Y1-A2.md  ACCEPTANCE_Y1-A3.md  ACCEPTANCE_Y1-A4.md  ACCEPTANCE_Y1-A5.md  ACCEPTANCE_Y1-A6.md  ACCEPTANCE_Y1-A7.md  (+18 more)
psr/validator-rs/: Cargo.toml
psr/validator-rs/src/: lib.rs
(+1560 files in other folders)
