[package]
name = "psr_validator"
version = "0.1.0"
edition = "2021"
authors = ["PSRA Engineering"]
license = "Apache-2.0"
description = "High-performance validator for PSRA Rules-as-Code documents"

[lib]
name = "psr_validator"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.3", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
jsonschema = "0.17"
thiserror = "1.0"
walkdir = "2.4"
rayon = "1.8"
